--- a/NFSMWConsoleBasicCheat.vcxproj.filters
+++ b/NFSMWConsoleBasicCheat.vcxproj.filters
@@ -61,4 +61,7 @@
       <Filter>UnlockAllThings</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Rascunho.txt" />
+  </ItemGroup>
 </Project>
